GNOME Bugzilla – Bug 791588
docs: GstBus: Adding missing docs and fix errors
Last modified: 2017-12-14 09:40:19 UTC
Few docs improvements
Created attachment 365506 [details] [review] docs: GstBus: Provide more information regarding reference counts.
Comment on attachment 365506 [details] [review] docs: GstBus: Provide more information regarding reference counts. Thanks for the docs patch! I think it might be even better if it was phrased slightly differently, something like: "The bus watch will take its own reference to @bus, so it is safe to unref @bus after setting up the bus watch" or somesuch? Because it's not really the *function* that takes the ref, what you want to express is that the lifetime of that bus ref is linked to the bus watch, no?
> Because it's not really the *function* that takes the ref, what you want to > express is that the lifetime of that bus ref is linked to the bus watch, no? Correct. Yes, it's not *the function* that takes the ref but it's later in the call chain. Thanks for reviewing :) I'll update it quickly.
Created attachment 365507 [details] [review] docs: GstBus: Provide more information for ref/unref during bus watch
Thanks! commit 52d2891fe3dea20969bfe5a5791e33d78a4c771d (HEAD -> master) Author: Umang Jain <mailumangjain@gmail.com> Date: Thu Dec 14 00:03:04 2017 +0530 docs: GstBus: Provide more information for ref/unref during bus watch. https://bugzilla.gnome.org/show_bug.cgi?id=791588