docs: GstBus: Provide more information for ref/unref during bus watch.

https://bugzilla.gnome.org/show_bug.cgi?id=791588